# faucon

./: .editorconfig  .gitattributes  .gitignore  CONFIGURATION.md  Cargo.toml  README.md  config.toml  crates.js  index.html  rust-toolchain  search-index.js  settings.html  source-files.js  x.asm
addr2line/: all.html  fn.demangle.html  fn.demangle_auto.html  index.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html  struct.LocationRangeIter.html
adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
ahash/: all.html  index.html  struct.AHashMap.html  struct.AHashSet.html  struct.AHasher.html  struct.RandomState.html  trait.CallHasher.html
ansi_term/: all.html  enum.Color.html  enum.Colour.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  index.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html  type.ANSIByteString.html  type.ANSIByteStrings.html  type.ANSIString.html  type.ANSIStrings.html
arrayvec/: all.html  index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  trait.Array.html
atty/: all.html  enum.Stream.html  fn.is.html  fn.isnt.html  index.html
backtrace/: all.html  enum.BytesOrWideString.html  enum.PrintFmt.html  fn.clear_symbol_cache.html  fn.resolve.html  fn.resolve_frame.html  fn.resolve_frame_unsynchronized.html  fn.resolve_unsynchronized.html  fn.trace.html  fn.trace_unsynchronized.html  index.html  struct.Backtrace.html  struct.BacktraceFmt.html  struct.BacktraceFrame.html  struct.BacktraceFrameFmt.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
bitflags/: all.html  index.html  macro.bitflags.html
bitvec/: all.html  index.html  macro.bitarr.html  macro.bitbox.html  macro.bits.html  macro.bitvec.html
bytecount/: all.html  fn.count.html  fn.naive_count.html  fn.naive_count_32.html  fn.naive_num_chars.html  fn.num_chars.html  index.html
byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
cfg_if/: all.html  index.html  macro.cfg_if.html
clap/: all.html  enum.AppSettings.html  enum.ArgSettings.html  enum.ErrorKind.html  enum.Shell.html  index.html  macro._clap_count_exprs.html  macro.app_from_crate.html  macro.arg_enum.html  macro.clap_app.html  macro.crate_authors.html  macro.crate_description.html  macro.crate_name.html  macro.crate_version.html  macro.load_yaml!.html  macro.load_yaml.html  macro.value_t.html  macro.value_t_or_exit.html  macro.values_t.html  macro.values_t_or_exit.html  sidebar-items.js  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Error.html  struct.OsValues.html  struct.SubCommand.html  struct.Values.html  struct.YamlLoader.html  type.Result.html
color_eyre/: all.html  fn.install.html  index.html  struct.Handler.html
color_spantrace/: all.html  fn.colorize.html  fn.set_theme.html  index.html  sidebar-items.js  struct.InstallThemeError.html  struct.Theme.html
dirs_next/: all.html  fn.audio_dir.html  fn.cache_dir.html  fn.config_dir.html  fn.data_dir.html  fn.data_local_dir.html  fn.desktop_dir.html  fn.document_dir.html  fn.download_dir.html  fn.executable_dir.html  fn.font_dir.html  fn.home_dir.html  fn.picture_dir.html  fn.public_dir.html  fn.runtime_dir.html  fn.template_dir.html  fn.video_dir.html  index.html
dirs_sys_next/: all.html  fn.home_dir.html  fn.is_absolute_path.html  fn.user_dir.html  fn.user_dirs.html  index.html
enum_primitive/: all.html  enum.Option.html  index.html  macro.enum_from_primitive.html  macro.enum_from_primitive_impl.html  macro.enum_from_primitive_impl_ty.html  trait.FromPrimitive.html
examples/: dma.fuc  init.fuc
eyre/: all.html  fn.set_hook.html  index.html  macro.bail.html  macro.ensure.html  macro.eyre.html  struct.Chain.html  struct.DefaultHandler.html  struct.InstallError.html  struct.Report.html  trait.ContextCompat.html  trait.EyreHandler.html  trait.WrapErr.html  type.Result.html
faucon/: all.html  constant.CONFIG_ENV.html  fn.assemble.html  fn.disassemble.html  fn.emulate.html  fn.main.html  fn.read_config.html  index.html  sidebar-items.js
faucon-asm/: Cargo.toml
faucon-asm-derive/: Cargo.toml
faucon-asm-derive/src/: ast.rs  attrs.rs  impl.rs  lib.rs  parser.rs
faucon-asm-macros/: Cargo.toml
faucon-asm-macros/src/: lib.rs
faucon-asm/src/: arguments.rs  assembler.rs  bit_utils.rs  bitfields.rs  bytes_ext.rs  disassembler.rs  instruction.rs  isa.rs  lib.rs  main.rs  opcode.rs  operand.rs  operands.rs
faucon-asm/src/assembler/: codegen.rs  context.rs  error.rs  interner.rs  lexer.rs  parser.rs  span.rs  syntax.rs
faucon-asm/src/disassembler/: pretty.rs
faucon-emu/: Cargo.toml
faucon-emu/src/: lib.rs
faucon-emu/src/cpu/: instructions.rs  mod.rs  pipeline.rs  registers.rs
faucon-emu/src/cpu/instructions/: alu.rs  branch.rs  control.rs  crypto.rs  data.rs  intr.rs  mod.rs  utils.rs  vm.rs
faucon-emu/src/crypto/: acl.rs  aes.rs  commands.rs  mac.rs  mod.rs
faucon-emu/src/dma/: mod.rs
faucon-emu/src/memory/: mod.rs  tlb.rs
faucon_asm/: all.html  enum.FalconError.html  index.html  macro.faucon_asm!.html  macro.faucon_asm.html  sidebar-items.js  struct.Instruction.html
faucon_asm_derive/: all.html  derive.Instruction.html  index.html  sidebar-items.js
faucon_emu/: all.html  index.html  sidebar-items.js
funty/: all.html  index.html  trait.AtLeast128.html  trait.AtLeast16.html  trait.AtLeast32.html  trait.AtLeast64.html  trait.AtLeast8.html  trait.AtMost128.html  trait.AtMost16.html  trait.AtMost32.html  trait.AtMost64.html  trait.AtMost8.html  trait.Is128.html  trait.Is16.html  trait.Is32.html  trait.Is64.html  trait.Is8.html  trait.IsFloat.html  trait.IsInteger.html  trait.IsNumber.html  trait.IsSigned.html  trait.IsUnsigned.html
(+13872 files in other folders)
