[package]
name = "faucon"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "A comprehensive tooling suite for the NVIDIA Falcon microprocessors"
license = "Apache-2.0/MIT"
readme = "README.md"
homepage = "https://github.com/vbe0201/faucon"
edition = "2018"

[workspace]
members = ["faucon-asm", "faucon-asm-derive", "faucon-emu"]

[dependencies]
faucon-asm = { path = "faucon-asm" }
faucon-emu = { path = "faucon-emu" }
nom = "5.1.2"
termcolor = "1.1"
toml = "0.5"

[dependencies.color-eyre]
git = "https://github.com/Stupremee/color-eyre"
branch = "master"
default-features = false

[dependencies.clap]
version = "2.33"
features = ["yaml"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

# Faster backtraces on debug profile
[profile.dev.package.backtrace]
opt-level = 3
