[package]
name = "faucon"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "A comprehensive tooling suite for the NVIDIA Falcon microprocessors"
license = "Apache-2.0/MIT"
readme = "README.md"
homepage = "https://github.com/vbe0201/faucon"
repository = "https://github.com/vbe0201/faucon"
edition = "2018"

[workspace]
members = ["faucon-asm", "faucon-asm-derive", "faucon-emu"]

# Faster backtraces on debug profile.
[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
ansi_term = "0.12.1"
color-eyre = "0.5.2"
faucon-asm = { path = "faucon-asm" }
faucon-emu = { path = "faucon-emu" }
hex = "0.4"
nom = "5.1.2"
paste = "1.0.0"
rustyline = "6.2.0"
rustyline-derive = "0.3.1"
toml = "0.5"
owo-colors = "1.1.3"

[dependencies.clap]
version = "2.33"
features = ["yaml"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
