[package]
name = "faucon-asm-derive"
version = "0.3.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Procedural macros for opcode lookup table generation in `faucon-asm`"
license = "Apache-2.0/MIT"
homepage = "https://github.com/vbe0201/faucon"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
