[package]
name = "faucon-asm-macros"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Helper macros for the faucon-asm crate."
license = "Apache-2.0/MIT"
homepage = "https://github.com/vbe0201/faucon"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
