[package]
name = "faucon-asm"
version = "0.1.1"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "A crate for processing NVIDIA Falcon assembly."
license = "Apache-2.0/MIT"
homepage = "https://github.com/vbe0201/faucon"
edition = "2018"

[dependencies]
faucon-asm-derive = { path = "../faucon-asm-derive" }
nom = "6.1"
nom_locate = "3.0"
num-traits = "0.2"
