[package]
name = "faucon-asm"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Crate for processing NVIDIA Falcon assembly"
license = "Apache-2.0/MIT"
homepage = "https://github.com/vbe0201/faucon"
edition = "2021"

[dependencies]
faucon-asm-derive = { path = "../faucon-asm-derive", version = "0.1.0" }

ahash = "0.7"
nom = "7.1"
nom_locate = "4.0"
num-traits = "0.2"
