[package]
name = "faucon-emu"
version = "0.1.0"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
description = "Implementation of an NVIDIA Falcon CPU emulator"
license = "Apache-2.0/MIT"
homepage = "https://github.com/vbe0201/faucon"
edition = "2018"

[dependencies]
byteorder = "1.3"
faucon-asm = { path = "../faucon-asm" }
paste = "0.1"
